fixed glitch tab iss, temporarily removed footer, removed excess gap, alphabetical order for dummy data

--- a/src/components/compound/FigCard/Figcard.module.scss
+++ b/src/components/compound/FigCard/Figcard.module.scss
@@ -58,7 +58,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 12px;
+    gap: 8px;
     
     p{
         color: #525252;
