--- a/src/components/compound/PageBanner/PageBanner.module.scss
+++ b/src/components/compound/PageBanner/PageBanner.module.scss
@@ -1,6 +1,6 @@
 .BannerWrapper{
     background-color:#222;
-    border-radius: 28px;
+    border-radius: 16px;
     width: 100%;
     padding: 40px;
 }
